# Libra

./: .gitignore  .gitmodules  Makefile  README.md  parser_lanczos.cpp  setup.sh
SHA256/: convert.py  sha256.c  sha256.ll
implementation/: .gitignore  CMakeLists.txt  Makefile  Makefile.orig  Makefile2  README.md  SHA256_64_merkle_1_rdl.pws  default.profdata  default.profraw  error.txt  inputvpd  linear_gkr.sublime-workspace  meta_data_linear.txt  mm  p  parser  parser.cpp  parser_lanczos.cpp  parser_sha.cpp  parser_sha_data_parallel.cpp  pl  ps  psdp  test_circuit.txt
implementation/experiment_gpu/: Makefile  bc  boost_compute.cpp
implementation/poly/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  inputvpd  inputvpd.cpp  mult  test  vpd
implementation/src/: test.g4
implementation/tests/: README.md
include/VPD/: vpd_test.h
include/infrastructure/: my_hhash.h  test
include/linear_gkr/: circuit_fast_track.h  polynomial.h  prime_field.h  prover_fast_track.h  verifier.h  verifier_fast_track.h  zk_prover.h  zk_verifier.h
paper/: README.md
paper/eprint/: CMT.tex  appendix.tex  discussion.tex  evaluation.tex  fastZKP.tex  gkr_linear_babis.tex  intro.tex  prelim.tex  zkgkr.tex  zkvpd.tex
paper/manuscript/: CMT.tex  Makefile  abstract.tex  appendix.tex  building_blocks.bib  definition.tex  discussion.tex  evaluation.tex  fastZKP.tex  generate1.py  generate2.py  generate3.py  generate4.py  generate5.py  generate6.py  generate7.py  generate8.py  generate9.py  gererate7.py  gitop.sh  gkr_linear.tex  gkr_linear_babis.tex  intro.tex  (+10 more)
tests/: mm.cpp
(+147 files in other folders)
